cabal-version:       >=1.10
name:                red-black
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2020 Ben Gamari
-- category:
build-type:          Simple

executable red-black
  main-is:             Main.hs
  other-modules:       RBTree
  build-depends:       base >=4.11 && <4.13,
                       containers,
                       scotty,
                       text,
                       force-layout,
                       lens,
                       diagrams-lib,
                       diagrams-core,
                       data-default,
                       diagrams-html5,
                       diagrams-contrib
  default-language:    Haskell2010
